<resources>
    <string name="app_name">Talmod-final</string>
    <string name="profile_choose_language">age</string>
    <string name="firstStudy">firstStsudy</string>
    <string name="tow_study">tow study</string>
    <string name="three_study">three study</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ok">אישור</string>
    <string name="What_you_want_learn">מה ברצונך ללמוד?</string>
    <string name="daf_hayomi">דף היומי</string>
    <string name="talmod_bavli">תלמוד בבלי</string>
    <string name="splash_activity">SplashActivity</string>
    <string name="do_you_want_to_return">ברצונך לנהל גם חזרה על הלימוד?</string>
    <string name="no_thanks">לא תודה</string>
    <string name="one_time">פעם אחת</string>
    <string name="twice">פעמיים</string>
    <string name="three_times">שלש פעמים</string>
    <string name="conversion_assets_error">conversion Assets error</string>
    <string name="you_must_choose_type_of_study">עליך לבחור סוג לימוד</string>
    <string name="type">מסוג: </string>
    <string name="chazara">חזרות: </string>
    <string name="you_want_create_daily_study">ברצונך ליצור לימוד יומי</string>
    <string name="break_line">\n</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="all">הכל</string>
    <string name="learned">למדתי</string>
    <string name="skipped">דילגתי</string>
    <string name="you_learned"> למדת</string>
    <string name="pages">דפים</string>
    <string name="from">מתוך</string>
    <string name="pages_to_complete"> דפים להשלמה</string>
    <string name="masechet">מסכת</string>
    <string name="more_than_thre_types_of_study">No more than 3 types of study can be created!</string>
    <string name="add_type_of_study">הוסף לימוד</string>
    <string name="remove">מחק</string>
    <string name="edit_profile">ערוך פרופיל</string>
    <string name="alert_text_for_skalim">עקב שמסכת זו אין מקורה מהתלמוד בבלי אלא מן התלמוד ירושלמי אין ביכולתנו להציג את הדף של היום, תמיד תוצג תחילת המסכת. הינך מוזמן לגלול לדף של היום ולהתחיל ללמוד...</string>
    <string name="alert_text_for_kinim_midot">עקב שמסכת זו אין מקורה מהתלמוד בבלי אלא מן המשניות אין ביכולתנו להציג את הדף של היום, תמיד תוצג תחילת המסכת. הינך מוזמן לגלול לדף של היום ולהתחיל ללמוד...</string>
    <string name="sign_up">sign up</string>
    <string name="log_in">log in</string>
</resources>