<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <item
        android:id="@+id/add_type_of_study_MENU_I"
        android:orderInCategory="100"
        android:title="@string/add_type_of_study"
        android:icon="@drawable/book"
        app:showAsAction="never" />
    <item
        android:id="@+id/delete_type_of_study_MENU_I"
        android:orderInCategory="100"
        android:title="@string/remove"
        android:icon="@drawable/book"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/edit_profile_MENU_I"
        android:orderInCategory="300"
        android:title="@string/edit_profile"
        android:icon="@drawable/book"
        app:showAsAction="never"/>

</menu>